[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/fonts/ScribblesResource.tres" type="DynamicFont" id=1]
[ext_resource path="res://assets/fonts/Scribbles.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://scenes/Card.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 90
outline_size = 2
extra_spacing_char = 1
extra_spacing_space = 2
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 58
outline_size = 2
extra_spacing_char = 1
extra_spacing_space = 2
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 48
outline_size = 2
extra_spacing_char = 1
extra_spacing_space = 2
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 68
outline_size = 2
extra_spacing_char = 1
extra_spacing_space = 2
font_data = ExtResource( 2 )

[node name="Card" type="Control"]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 750, 1050 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="CardImage" type="Sprite" parent="."]
position = Vector2( 375, 525 )

[node name="CardName" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -375.0
margin_top = 48.0
margin_right = 375.0
margin_bottom = 128.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 750, 0 )
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0.0588235, 0.219608, 0.45098, 1 )
text = "Card Name"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CardCost" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 169.0
margin_top = 96.0
margin_right = 369.0
margin_bottom = 196.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 200, 0 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.0588235, 0.219608, 0.45098, 1 )
text = "1"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CardType" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -167.0
margin_top = 600.0
margin_right = 185.0
margin_bottom = 700.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 200, 0 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.0588235, 0.219608, 0.45098, 1 )
text = "Creature Card"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CardText" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -311.0
margin_top = 704.0
margin_right = 329.0
margin_bottom = 976.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 200, 0 )
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.0588235, 0.219608, 0.45098, 1 )
text = "Insert text here"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CardStats" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 153.0
margin_top = 928.0
margin_right = 353.0
margin_bottom = 1028.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 200, 0 )
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.0588235, 0.219608, 0.45098, 1 )
text = "1/2"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
